--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <title>Shubham Jawalkar | MIS Executive</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-523258703"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-7X0MT14HMH');
-</script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-523258703"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-7X0MT14HMH');
+    </script>
 </head>
-<body>
 
+<body>
 <div class="container">
 
     <!-- HERO SECTION -->
@@ -29,46 +29,30 @@
             <h1>Shubham Jawalkar</h1>
             <h2>MIS Executive & Campaign Coordinator</h2>
             <p>
-                MIS Executive & Operations experience with over 2.5 years of experience combining focus on reporting,
-                analytics, automation and team leadership and operational support. Skilled in transforming raw data into
-                actionable business insights through Excel, VBA automation & MSSQL. Adept at KPI monitoring, SLA tracking,
-                campaign analytics, and delivering client-ready reports that drive process improvements and decision-making
-                efficiency.
+                MIS Executive with 2.5+ years of experience in reporting, analytics,
+                automation, and operational support. Skilled in transforming raw data
+                into actionable insights using Excel, VBA, SQL, and automation tools.
             </p>
             <a href="assets/Shubham_Jawalkar_Resume.pdf" class="btn" download>
                 Download Resume
             </a>
         </div>
     </section>
-        
-<section>
-    <h3>Technical & Analytical Skills</h3>
 
-    <div class="grid">
-
-        <!-- Programming & Backend -->
-        <div class="card">Python (Flask Framework)</div>
-        <div class="card">SQL Server & Query Optimization</div>
-        <div class="card">PyODBC Database Connectivity</div>
-        <div class="card">Backend Logic Development</div>
-
-        <!-- Data & Reporting -->
-        <div class="card">Data Processing & Filtering Logic</div>
-        <div class="card">Advanced Excel (Pivot Tables, Macros)</div>
-        <div class="card">VBA Automation (UserForms & Macros)</div>
-        <div class="card">Power BI Dashboards</div>
-
-        <!-- Automation & Business Intelligence -->
-        <div class="card">KPI & SLA Performance Tracking</div>
-        <div class="card">Campaign Analytics & ROI Reporting</div>
-        <div class="card">Report & Workflow Automation</div>
-        <div class="card">Data Validation & Suppression Logic</div>
-
-        <!-- Frontend Basics -->
-        <div class="card">HTML5, CSS3 & JavaScript</div>
-        <div class="card">AJAX File Upload Handling</div>
-
-    </div>
+    <!-- SKILLS -->
+    <section>
+        <h3>Technical & Analytical Skills</h3>
+        <div class="grid">
+            <div class="card">Python (Flask Framework)</div>
+            <div class="card">SQL Server & Query Optimization</div>
+            <div class="card">VBA Automation</div>
+            <div class="card">Advanced Excel</div>
+            <div class="card">Power BI Dashboards</div>
+            <div class="card">Data Processing & Filtering</div>
+            <div class="card">KPI & SLA Monitoring</div>
+            <div class="card">Report Automation</div>
+            <div class="card">HTML, CSS & JavaScript</div>
+        </div>
     </section>
 
     <!-- EXPERIENCE -->
@@ -79,10 +63,9 @@
             <h4>Campaign Coordinator</h4>
             <span>Candorworks Pvt. Ltd | Apr 2024 – Present</span>
             <ul>
-                <li>Built KPI & SLA dashboards for campaign monitoring</li>
+                <li>Built KPI & SLA dashboards</li>
                 <li>Automated MIS reports using VBA & SQL</li>
-                <li>Reduced reporting time by ~40 minutes per report</li>
-                <li>Prepared client-ready reports and insights</li>
+                <li>Reduced reporting time significantly</li>
             </ul>
         </div>
 
@@ -90,9 +73,9 @@
             <h4>MIS Executive</h4>
             <span>Candorworks Pvt. Ltd | May 2023 – Apr 2024</span>
             <ul>
-                <li>Prepared daily & monthly delivery reports</li>
-                <li>Maintained campaign-wise lead trackers</li>
-                <li>Worked with advanced Excel formulas & pivots</li>
+                <li>Prepared delivery reports</li>
+                <li>Maintained campaign lead trackers</li>
+                <li>Worked with advanced Excel tools</li>
             </ul>
         </div>
     </section>
@@ -120,146 +103,55 @@
 
             <!-- PROJECT 1 -->
             <div class="card project-card">
-                <h4>Excel VBA Automation – Mini Data Entry & Management System</h4>
-
-                <p>
-                    Developed a smart Excel VBA–based data entry and record management system
-                    designed for startups and small businesses. The solution transforms Excel
-                    into a mini ERP-like tool with a focus on automation, accuracy, and data security.
-                </p>
-
+                <h4>Excel VBA Automation – Mini Data Entry System</h4>
+                <p>Excel-based automation tool with secure data handling and reporting.</p>
                 <ul>
-                    <li>Secure and confidential record management using VBA UserForms</li>
-                    <li>Auto-generation of unique Purchase IDs with zero duplication</li>
-                    <li>Quick search and edit functionality using Purchase ID</li>
-                    <li>Dynamic dropdown lists populated directly from the database</li>
-                    <li>Export functionality to PDF and CSV for reports and invoices</li>
-                    <li>Password-protected login system for enhanced data security</li>
+                    <li>Auto ID generation</li>
+                    <li>Dynamic forms using VBA</li>
+                    <li>Export to PDF/CSV</li>
                 </ul>
-
-                <p>
-                    The project demonstrates how Excel combined with VBA automation can deliver
-                    enterprise-style process automation without expensive software, making it
-                    highly suitable for MIS operations and MSMEs.
-                </p>
-
-                <span>Tools: MS Excel, VBA (Macros), UserForms, CSV/PDF Export</span>
+                <span>Tools: MS Excel, VBA</span>
             </div>
 
             <!-- PROJECT 2 -->
             <div class="card project-card">
-                <h4>Sales Performance Analytics Dashboard (FTD & MTD)</h4>
-
-                <p>
-                    Designed an interactive performance analytics dashboard to track
-                    First-To-Date (FTD) and Month-To-Date (MTD) sales metrics, helping
-                    leadership teams quickly understand performance trends and take
-                    data-driven decisions.
-                </p>
-
+                <h4>Sales Performance Analytics Dashboard</h4>
+                <p>Interactive dashboard for tracking FTD & MTD sales performance.</p>
                 <ul>
-                    <li>Real-time regional sales performance breakdown</li>
-                    <li>Clear identification of top and bottom performers</li>
-                    <li>Automated calculation of averages and performance variance</li>
-                    <li>Visual sales trends for faster and clearer decision-making</li>
-                    <li>Structured MIS reporting with minimal manual effort</li>
+                    <li>Regional performance analysis</li>
+                    <li>Variance & average tracking</li>
+                    <li>Visual trend monitoring</li>
                 </ul>
-
-                <p>
-                    This dashboard converts raw sales numbers into clear, actionable
-                    business insights, enabling stakeholders to focus on performance gaps,
-                    opportunities, and growth strategies.
-                </p>
-
-                <span>Tools: MS Excel, Advanced Formulas, Pivot Tables, Data Visualization</span>
+                <span>Tools: Excel, Pivot Tables</span>
             </div>
 
             <!-- PROJECT 3 -->
             <div class="card project-card">
                 <h4>Microsoft Leads Packaging Automation</h4>
-                <span>Nov 2024 – Dec 2024 | Savitribai Phule Pune University</span>
-
-                <p>
-                    Designed and developed a VBA-based automation solution to streamline
-                    the packaging and delivery of Microsoft leads in client-specific
-                    template formats. The system automates the transformation of raw lead
-                    data into standardized, client-ready delivery files with minimal
-                    manual effort.
-                </p>
-
-                <h5>Process Flow</h5>
+                <p>VBA automation for transforming raw leads into client templates.</p>
                 <ul>
-                    <li>Raw lead data is pasted into a structured input database sheet</li>
-                    <li>VBA scripts clean, validate, and organize data based on predefined rules</li>
-                    <li>Automated transformation aligns data with client-approved templates</li>
-                    <li>Final output is generated in a new sheet or file matching client format</li>
+                    <li>Data cleaning & validation</li>
+                    <li>Template-based formatting</li>
+                    <li>Automated output generation</li>
                 </ul>
+                <span>Tools: Excel, VBA</span>
+            </div>
 
-                <h5>Key Benefits</h5>
+            <!-- PROJECT 4 -->
+            <div class="card project-card">
+                <h4>Data Extraction & ABM Filtering Tool</h4>
+                <p>Flask-based web application for automated lead filtering and suppression.</p>
                 <ul>
-                    <li>Significant reduction in time spent on manual data formatting</li>
-                    <li>Improved accuracy by eliminating manual processing errors</li>
-                    <li>Consistent lead delivery aligned with client template standards</li>
-                    <li>User-friendly workflow requiring minimal technical expertise</li>
+                    <li>Country, domain & company filters</li>
+                    <li>ABM XLSX upload</li>
+                    <li>Email/domain suppression logic</li>
+                    <li>Excel export functionality</li>
                 </ul>
-
-                <p>
-                    This automation ensures faster, more accurate, and consistent lead
-                    delivery, helping teams meet client requirements efficiently while
-                    improving overall MIS and operational productivity.
-                </p>
-
-                <span>Tools: MS Excel, VBA (Macros), Data Transformation, Template Automation</span>
+                <span>Tools: Python (Flask), SQL Server, OpenPyXL</span>
             </div>
 
         </div>
-   
- <!-- PROJECT 4 -->
-<div class="card project-card">
-
-    <h4>Data Extraction & ABM Filtering Tool</h4>
-    <span>2025 | Personal Development Project</span>
-
-    <p>
-        Designed and developed a web-based data extraction and filtering
-        application to automate lead processing, suppression handling,
-        and structured Excel exports. The system replaces manual
-        spreadsheet filtering with a scalable, database-driven solution
-        to improve efficiency, accuracy, and campaign readiness.
-    </p>
-
-    <h5>Process Flow</h5>
-    <ul>
-        <li>User applies country, domain, or company-based filters</li>
-        <li>Optional ABM XLSX file is uploaded for inclusion/suppression logic</li>
-        <li>Flask backend builds dynamic SQL queries securely</li>
-        <li>Temporary SQL tables apply domain and email suppression</li>
-        <li>Filtered results are displayed with server-side pagination</li>
-        <li>Final data can be exported instantly to Excel format</li>
-    </ul>
-
-    <h5>Key Benefits</h5>
-    <ul>
-        <li>Significant reduction in manual Excel filtering time</li>
-        <li>Improved campaign targeting accuracy</li>
-        <li>Secure and optimized database-level filtering</li>
-        <li>Scalable solution for handling large lead datasets</li>
-        <li>Clean and structured export-ready outputs</li>
-    </ul>
-
-    <p>
-        This project demonstrates backend development skills,
-        SQL optimization, automation-driven thinking, and the
-        ability to build real-world data processing systems that
-        enhance marketing and operational workflows.
-    </p>
-
-    <span>Tools: Python (Flask), SQL Server, PyODBC, OpenPyXL, HTML, CSS, JavaScript</span>
-
-</div>
-
-
- </section>
+    </section>
 
     <!-- FOOTER -->
     <footer>
@@ -275,13 +167,8 @@
         <p>📞 <a href="tel:+919021160556">+91 90211 60556</a></p>
         <p>📧 <a href="mailto:shubhamjawalkar9021@gmail.com">shubhamjawalkar9021@gmail.com</a></p>
         <p>📍 Pune, Maharashtra</p>
-        <p>👁️ Visitors:
-<img src="https://hitwebcounter.com/counter/counter.php?page=123456&style=0006&nbdigits=5&type=page&initCount=0">
-</p>
-
     </footer>
 
 </div>
-
 </body>
 </html>
