--- a/index.html
+++ b/index.html
@@ -96,62 +96,140 @@
     </section>
 
     <!-- PROJECTS -->
-    <section>
-        <h3>Projects</h3>
+<section>
+    <h3>Projects</h3>
 
-        <div class="projects-grid">
+    <div class="projects-grid">
 
-            <!-- PROJECT 1 -->
-            <div class="card project-card">
-                <h4>Excel VBA Automation – Mini Data Entry System</h4>
-                <p>Excel-based automation tool with secure data handling and reporting.</p>
-                <ul>
-                    <li>Auto ID generation</li>
-                    <li>Dynamic forms using VBA</li>
-                    <li>Export to PDF/CSV</li>
-                </ul>
-                <span>Tools: MS Excel, VBA</span>
-            </div>
+        <!-- PROJECT 1 -->
+        <div class="card project-card">
+            <h4>Excel VBA Automation – Mini Data Entry & Management System</h4>
 
-            <!-- PROJECT 2 -->
-            <div class="card project-card">
-                <h4>Sales Performance Analytics Dashboard</h4>
-                <p>Interactive dashboard for tracking FTD & MTD sales performance.</p>
-                <ul>
-                    <li>Regional performance analysis</li>
-                    <li>Variance & average tracking</li>
-                    <li>Visual trend monitoring</li>
-                </ul>
-                <span>Tools: Excel, Pivot Tables</span>
-            </div>
+            <p>
+                Developed a smart Excel VBA–based data entry and record management system
+                designed for startups and small businesses. The solution transforms Excel
+                into a mini ERP-like tool with a focus on automation, accuracy, and data security.
+            </p>
 
-            <!-- PROJECT 3 -->
-            <div class="card project-card">
-                <h4>Microsoft Leads Packaging Automation</h4>
-                <p>VBA automation for transforming raw leads into client templates.</p>
-                <ul>
-                    <li>Data cleaning & validation</li>
-                    <li>Template-based formatting</li>
-                    <li>Automated output generation</li>
-                </ul>
-                <span>Tools: Excel, VBA</span>
-            </div>
+            <ul>
+                <li>Secure and confidential record management using VBA UserForms</li>
+                <li>Auto-generation of unique Purchase IDs with zero duplication</li>
+                <li>Quick search and edit functionality using Purchase ID</li>
+                <li>Dynamic dropdown lists populated directly from the database</li>
+                <li>Export functionality to PDF and CSV for reports and invoices</li>
+                <li>Password-protected login system for enhanced data security</li>
+            </ul>
 
-            <!-- PROJECT 4 -->
-            <div class="card project-card">
-                <h4>Data Extraction & ABM Filtering Tool</h4>
-                <p>Flask-based web application for automated lead filtering and suppression.</p>
-                <ul>
-                    <li>Country, domain & company filters</li>
-                    <li>ABM XLSX upload</li>
-                    <li>Email/domain suppression logic</li>
-                    <li>Excel export functionality</li>
-                </ul>
-                <span>Tools: Python (Flask), SQL Server, OpenPyXL</span>
-            </div>
+            <p>
+                Demonstrates enterprise-style process automation without expensive software,
+                making it highly suitable for MIS operations and MSMEs.
+            </p>
 
+            <span>Tools: MS Excel, VBA (Macros), UserForms, CSV/PDF Export</span>
         </div>
-    </section>
+
+        <!-- PROJECT 2 -->
+        <div class="card project-card">
+            <h4>Sales Performance Analytics Dashboard (FTD & MTD)</h4>
+
+            <p>
+                Designed an interactive performance analytics dashboard to track
+                First-To-Date (FTD) and Month-To-Date (MTD) sales metrics, helping
+                leadership teams quickly understand trends and take data-driven decisions.
+            </p>
+
+            <ul>
+                <li>Real-time regional sales performance breakdown</li>
+                <li>Clear identification of top and bottom performers</li>
+                <li>Automated calculation of averages and performance variance</li>
+                <li>Visual sales trends for faster decision-making</li>
+                <li>Structured MIS reporting with minimal manual effort</li>
+            </ul>
+
+            <p>
+                Converts raw sales numbers into clear, actionable business insights
+                enabling stakeholders to focus on growth opportunities.
+            </p>
+
+            <span>Tools: MS Excel, Advanced Formulas, Pivot Tables, Data Visualization</span>
+        </div>
+
+        <!-- PROJECT 3 -->
+        <div class="card project-card">
+            <h4>Microsoft Leads Packaging Automation</h4>
+            <span>Nov 2024 – Dec 2024 | Savitribai Phule Pune University</span>
+
+            <p>
+                Designed and developed a VBA-based automation solution to streamline
+                the packaging and delivery of Microsoft leads in client-specific
+                template formats.
+            </p>
+
+            <h5>Process Flow</h5>
+            <ul>
+                <li>Raw lead data pasted into structured input database sheet</li>
+                <li>VBA scripts clean, validate, and organize data</li>
+                <li>Automated transformation aligns data with client-approved templates</li>
+                <li>Final output generated in client-required format</li>
+            </ul>
+
+            <h5>Key Benefits</h5>
+            <ul>
+                <li>Reduced time spent on manual formatting</li>
+                <li>Improved accuracy by eliminating human errors</li>
+                <li>Consistent template-aligned lead delivery</li>
+                <li>User-friendly workflow with minimal expertise required</li>
+            </ul>
+
+            <p>
+                Improved operational productivity and ensured faster,
+                more accurate client lead delivery.
+            </p>
+
+            <span>Tools: MS Excel, VBA (Macros), Data Transformation</span>
+        </div>
+
+        <!-- PROJECT 4 -->
+        <div class="card project-card">
+            <h4>Data Extraction & ABM Filtering Tool</h4>
+            <span>2025 | Personal Development Project</span>
+
+            <p>
+                Designed and developed a Flask-based web application to automate
+                lead filtering, ABM logic implementation, suppression handling,
+                and structured Excel exports using SQL Server.
+            </p>
+
+            <h5>Process Flow</h5>
+            <ul>
+                <li>User applies country, domain, or company filters</li>
+                <li>Optional ABM XLSX file uploaded for inclusion/suppression</li>
+                <li>Backend builds secure parameterized SQL queries</li>
+                <li>Temporary SQL tables apply domain & email suppression logic</li>
+                <li>Server-side pagination handles large datasets efficiently</li>
+                <li>Filtered data exported instantly to Excel</li>
+            </ul>
+
+            <h5>Key Benefits</h5>
+            <ul>
+                <li>Significant reduction in manual Excel filtering time</li>
+                <li>Improved campaign targeting accuracy</li>
+                <li>Secure and optimized database-level filtering</li>
+                <li>Scalable solution for large lead datasets</li>
+                <li>Clean and structured export-ready outputs</li>
+            </ul>
+
+            <p>
+                Demonstrates backend development expertise, SQL optimization,
+                automation-driven thinking, and ability to build scalable
+                real-world data processing systems.
+            </p>
+
+            <span>Tools: Python (Flask), SQL Server, PyODBC, OpenPyXL, HTML, CSS, JavaScript</span>
+        </div>
+
+    </div>
+</section>
 
     <!-- FOOTER -->
     <footer>
